--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="flag-icon.min.css">
+
 </head>
 <body>
+  <nav>
+    <a href="/"><span class='flag-icon flag-icon-gb'>&nbsp;</span> en</a>
+    <a href="#/fr/"><span class='flag-icon flag-icon-fr'>&nbsp;</span> fr</a>
+  </nav>
   <div id="app"></div>
   <script>
     window.$docsify = {
       name: '',
       repo: '',
-      loadSidebar: true,
-      homepage: 'home.md'
+      loadSidebar: true
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
